Adding thread for new Node addition